packages/kit/test/apps/basics/src/routes/load/invalidation/route/shared/+layout.js
/** @type {import('./$types').LayoutLoad} */
export function load({ route }) {
	return { route, random: Math.random() };
}
